add crud insumos

--- a/src/cabecalho.html
+++ b/src/cabecalho.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,12 +27,12 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="comprasDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Compras
+                        <a class="nav-link dropdown-toggle" href="#" id="insumosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            insumos
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="comprasDropdown">
-                            <li><a class="dropdown-item" href="#">Gerenciar Compras</a></li>
-                            <li><a class="dropdown-item" href="#">Relatório de Compras</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="insumosDropdown">
+                            <li><a class="dropdown-item" href="/insumos">Gerenciar insumos</a></li>
+                            <li><a class="dropdown-item" href="#">Relatório de insumos</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
