--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
                 <div id="livros-chart" style="height: 300px;"></div>
             </div>
             <div class="col-md-6">
-                <div id="compras-chart" style="height: 300px;"></div>
+                <div id="insumos-chart" style="height: 300px;"></div>
             </div>
         </div>
     
