--- a/src/login.html
+++ b/src/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BookSell</title>
+  <title>RastreioAgro</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
-          <div class="card-header">Acesso - Sistema BookSell</div>
+          <div class="card-header">Acesso - Sistema RastreioAgro</div>
           <div class="card-body">
             <form action="/acessar" method="POST">
               <div class="mb-3">
