add crud insumos

--- a/src/insumos/novo_insumos.html
+++ b/src/insumos/novo_insumos.html
@@ -1,6 +1,6 @@
 
 <h3>Inserir Novo Insumos</h3>
-<form action="/insumo/novo" method="post">
+<form action="/insumos/novo" method="post">
     <div class="mb-3">
         <label for="id" class="form-label">ID</label>
         <input type="text" class="form-control" id="id" name="id" placeholder="ID">
