add crud propriedade

--- a/src/cabecalho.html
+++ b/src/cabecalho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agricultor</title>
+    <title>RastreiaAgro</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -33,6 +33,15 @@
                         <ul class="dropdown-menu" aria-labelledby="insumosDropdown">
                             <li><a class="dropdown-item" href="/insumos">Gerenciar insumos</a></li>
                             <li><a class="dropdown-item" href="#">Relatório de insumos</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="propriedadeDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            propriedade
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="propriedadeDropdown">
+                            <li><a class="dropdown-item" href="/propriedade">Gerenciar propriedade</a></li>
+                            <li><a class="dropdown-item" href="#">Relatório de propriedade</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
