--- a/src/cabecalho.html
+++ b/src/cabecalho.html
@@ -44,6 +44,17 @@
                             <li><a class="dropdown-item" href="#">Relatório de propriedade</a></li>
                         </ul>
                     </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="talhaoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            talhao
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="talhaoDropdown">
+                            <li><a class="dropdown-item" href="/talhao">Gerenciar talhao</a></li>
+                            <li><a class="dropdown-item" href="#">Relatório de talhao</a></li>
+                        </ul>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="/sair">Sair</a>
                     </li>
