add crud cultura

--- a/src/cabecalho.html
+++ b/src/cabecalho.html
@@ -55,6 +55,16 @@
                         </ul>
                     </li>
 
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="cultura" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            cultura
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="cultura">
+                            <li><a class="dropdown-item" href="/cultura">Gerenciar cultura</a></li>
+                            <li><a class="dropdown-item" href="#">Relatório de cultura</a></li>
+                        </ul>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="/sair">Sair</a>
                     </li>
