--- a/src/agricultor/agricultor.html
+++ b/src/agricultor/agricultor.html
@@ -5,59 +5,5 @@
 
             <p>{mensagem}</p>
 
-            <table class="table table-striped zebrado">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nome do agricultor</th>
-                    <th>email</th>
-                    <th>senha</th>
-                    <th>cpf</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Dom Casmurro</td>
-                    <td>dom@gmail.com</td>
-                    <td>123</td>
-                    <td>12312312323</td>
-                    <td>
-                        <a class="btn btn-outline-warning" href="/agricultor/editar/1">Alterar</a>
-                    </td>
-                    <td>
-                        <a class="btn btn-outline-danger" href="/agricultor/excluir/1">Excluir</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Harry </td>
-                    <td>potter@gmail.com</td>
-                    <td>321</td>
-                    <td>32132132121</td>
-                    <td>
-                        <a class="btn btn-outline-warning" href="/agricultor/editar/1">Alterar</a>
-                    </td>
-                    <td>
-                        <a class="btn btn-outline-danger" href="/agricultor/excluir/1">Excluir</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>pedro silva</td>
-                    <td>pedro@gmail.com</td>
-                    <td>12312</td>
-                    <td>32143253253</td>
-                    <td>
-                        <a class="btn btn-outline-warning" href="/agricultor/editar/1">Alterar</a>
-                    </td>
-                    <td>
-                        <a class="btn btn-outline-danger" href="/agricultor/excluir/1">Excluir</a>
-                    </td>
-                </tr>
-                <!-- Adicione mais linhas conforme necessário -->
-            </tbody>
-            </table>
+            {tabela}
         </div>
