--- a/src/agricultor/editar_agricultor.html
+++ b/src/agricultor/editar_agricultor.html
@@ -1,22 +1,23 @@
 
         <h3>Editar agricultor</h3>
-        <form>
-            <input type="hidden" class="form-control" id="id" name="id" placeholder="ID" >
+        <form action="/agricultor/editar" method="post">
+            
+            <input type="hidden" class="form-control" id="id" name="id" placeholder="ID" value="{id}">
             <div class="mb-3">
                 <label for="nome" class="form-label">Nome do agricultor</label>
-                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do agricultor">
+                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do agricultor" value="{nome}">
             </div>
             <div class="mb-3">
                 <label for="editora" class="form-label">email</label>
-                <input type="text" class="form-control" id="email" name="email" placeholder="email">
+                <input type="text" class="form-control" id="email" name="email" placeholder="email" value="{email}" >
             </div>
             <div class="mb-3">
                 <label for="senha" class="form-label">senha</label>
-                <input type="text" class="form-control" id="senha" name="senha" placeholder="senha">
+                <input type="text" class="form-control" id="senha" name="senha" placeholder="senha" value="{senha}" >
             </div>
             <div class="mb-3">
                 <label for="cpf" class="form-label">cpf</label>
-                <input type="text" class="form-control" id="cpf" name="cpf" placeholder="cpf">
+                <input type="text" class="form-control" id="cpf" name="cpf" placeholder="cpf" value="{cpf}" >
             </div>
             <button type="submit" class="btn btn-warning">Alterar</button>
         </form>
